Updated CSS to remove scrollbar and added code to prevent long usernames from breaking the VideoInfo
The code for the username shortener is probably not optimal; Will take a look at it later, works for now

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 * {
   font-family: 'Courier New' !important;
+  scrollbar-width: none;
 }
 
 img.thumbnail {
   border-radius: 5px;
   width: 100%;
-  filter: drop-shadow(0px 2px 10px black);
 }
 
 .thumbnail_box {
@@ -33,3 +33,7 @@ img.thumbnail {
   width: 100%;
   filter: drop-shadow(0px 2px 3px black);
 }
+
+::-webkit-scrollbar { 
+  display: none; 
+} 
